--- a/nginx.conf
+++ b/nginx.conf
@@ -37,13 +37,7 @@ http {
         listen 80 default_server;
         # client_max_body_size 1M;
 
-        location /esqlate-front {
-
-            rewrite ^ $request_uri;
-            rewrite ^/esqlate-front/(.*)\?(.*)$ /$1?$2? break;
-            rewrite ^/esqlate-front/(.*) /$1 break;
-            return 400; #if the second rewrite won't match
-
+        location / {
             proxy_pass http://front;
         }
 
