--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
   "homepage": "https://github.com/forbesmyester/esqlate#readme",
   "dependencies": {
     "commander": "^4.1.1",
-    "esqlate-front": "^1.0.10",
-    "esqlate-server": "^1.1.8",
     "get-port": "^5.1.0",
     "open": "^7.0.0"
   },
   "devDependencies": {
     "chai-colors": "^1.0.1",
-    "cypress": "^3.8.2"
+    "cypress": "^3.8.2",
+    "download": "^8.0.0"
   }
 }
